--- a/main.tex
+++ b/main.tex
@@ -22,10 +22,11 @@
             pdfproducer={Latex con hyperref},
             pdfcreator={pdflatex}]{hyperref}
 
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{corollary}{Corollary}[theorem]
-\newtheorem{lemma}[theorem]{Lemma}
- 
+\newtheorem{theorem}{Teorema}[section]
+\newtheorem{corollary}{Corolario}[theorem]
+\newtheorem{lemma}[theorem]{Lema}
+\theoremstyle{definition}
+\newtheorem{definition}{Definición}[section]
 
 \begin{document}
 
