--- a/Capitulos/cap2.tex
+++ b/Capitulos/cap2.tex
@@ -97,88 +97,89 @@ d_{E}^{eff}= \frac{1}{Tr \Omega_{E}^{2}} \ge \frac{d_{R}}{d_{S}}.
 
 Donde $\Omega_{E}= Tr_{S} \mathcal{E}_{R}$. Ambas cantidades $\eta $ y $\eta'$ serán pequeñas esto implica que el estado estará cercano al estado canónico con alta probabilidad cuando la dimensión efectiva del ambiente sea mucho más grande que la del sistema ( es decir $d_{E}^{eff} >> d_{S}$) y  $d_{R}\epsilon^2>>1>>\epsilon$. Esta última condición se puede asegurar cuando el espacio accesible total es grande ( es decir $d_{R}>>1$), escogiendo $\epsilon=d_{R}^{-\frac{1}{3}}$.\\
 \end{theorem}
-Para poder demostar el teorema \ref{teorema principal} se usará principalmente el lema de Levy. 
+
 \subsection{Lema de Levy}
-El teorema anterior tiene como base principal el lema de Levy (referencias). Este dice que al seleccionar un punto $\phi$ aleatoriamente de una hiperesfera de dimensión alta y que $f(\phi)$ no cambie muy rápido, entonces $f(\phi) \approx \langle f \rangle $ con alta probabilidad, Más exactamente:\\
+Para poder demostrar el teorema \ref{teorema principal} se usará  el lema de Levy. Este dice que al seleccionar un punto $\phi$ aleatoriamente de una hiperesfera de dimensión alta y que $f(\phi)$ no cambie muy rápido, entonces $f(\phi) \approx \langle f \rangle $ con alta probabilidad, Más exactamente:\\
 
-\textbf{Lema de Levy:} Dada una función $f: \mathbb{S}^d \to \mathbb{R} $ definida en la hiperesfera $\mathbb{S}^d$, y un punto $\phi \in \mathbb{S}^d $ es escogido de manera aleatoria uniforme, 
+\begin{lemma} \label{lemma de levy}
+
+Dada una función $f: \mathbb{S}^d \to \mathbb{R} $ definida en la hiperesfera d-dimensional $\mathbb{S}^d$ , y un punto $\phi \in \mathbb{S}^d $ es escogido de manera uniformemente aleatoria,
 \begin{equation}
-Prob[|f(\phi)- \langle f \rangle| \ge \epsilon ] \le 2exp(-\frac{2C(d+1)\epsilon^2}{\eta^2})
+Pr_{\phi} \{ |f(\phi)- \langle f \rangle| \geq \epsilon \} \leq 2exp(-\frac{2C(d+1)\epsilon^2}{\eta^2})
 \end{equation}
-donde $\eta$ es la constante de Lipschitz de $f$, dado por $\eta= \sup|\nabla f|$ y $C=(18\pi^3)^-1$.\\
+donde $\eta$ es la constante de Lipschitz de $f$, dado por $\eta= \sup|\nabla f|$ y $C=(18 \pi^3)^{-1} $.\\
 
-Gracias a la normalización, los estados puros en $\mathcal{H_{R}}$ se pueden representar como puntos sobre la superficie de una hiperesfera de dimensión $2d_{R}-1$, o sea  $\mathbb{S}^{2d_{R}-1}$. Luego e puede aplicar este lema a estado cuánticos $\phi$ aleatoriamente seleccionados. Para los estados seleccionados aleatoriamente $\phi \in \mathcal{H_{R}}$, se desea mostrar que $\norm{\rho_{S}- \Omega_{S}}_{1} \approx 0$ con alta probabilidad.\\
+\end{lemma}
 
-\subsection{Demostración del teorema 1}
-Ya con el teorema de Levy como herramienta se usará este para poder demostrar el teorema 1. Para usar el teorema de Levy para el problema actual se dice que $f(\phi)= \norm{\rho_{S} - \Omega_{S}}_{1}$. Antes de seguir con la demostración se quiere dar la idea de qué habla la constante de Lipschitz que fue nombrada anteriormente. Para esto se debe ver qué significa que una función sea Lipschitz continua. \\
-La definición general de continuidad es: Sea $f: I \to \mathbb{R}$ donde $I$ puede ser un intervalo abierto $(a,b)$ o uno cerrado $[a,b]$, además $C \in I$. Se dice que $f$ es continua en $C \longleftrightarrow \forall \epsilon >0 $ $\exists$ $ \delta >0 $ tal que  $ |x-c|\longrightarrow |f(x)-f(c)|< \epsilon $. Esta es la definición que en general se maneja pero hay sutilezas en esta definición que no siempre son mostradas como por ejemplo que $\delta$ depende de donde se ponga el  punto $C$, esto se ve claramente en la siguiente función: $f: (0,1) \to \mathbb{R}$, $f(x)=\frac{1}{x} $ al $C$ estar más lejos del $0$ permite un $\delta$ más grande pero al acercarse al $0$ el $\delta$ debe ser más pequeño.
-La continuidad de Lipschitz permite que se defina un $\delta$ constante sin importar donde se encuentre el $C$. Se es Lipschitz continuo si 
+Los conceptos manejados por el teorema \ref{lemma de levy} son conocidos generalmente excepción de la llamada constante de Lipschitz.Para poder entender qué es la  constante de Lipschitz se debe ver primero qué significa que una función sea Lipschitz continua. 
+\\
+La definición de continuidad dad en el cálculo básico es:
 
-\begin{equation}
-|f(x) -f(y)| \le \eta |x-y|,
-\end{equation}
+\theoremstyle{definition}
+\begin{definition}{continuidad}
+Sea $f: I \to \mathbb{R}$ donde $I$ puede ser un intervalo abierto $(a,b)$ o uno cerrado $[a,b]$, además $C \in I$. Se dice que $f$ es continua en $C$ si y solo si para todo $ \epsilon >0 $  existe un $ \delta >0 $ tal que  $ |x-c|\longrightarrow |f(x)-f(c)|< \epsilon $.
+\end{definition} 
 
- con $\eta$ constante esto permite poner $|f(x)-f(y)| < \epsilon \to $ $\delta < \frac{\epsilon}{\eta} $. Ahora si f es derivable y $\nabla f$ es acotado, $x$ y $y$ dados existe $\xi$ entre $x$,$y$ tal que:
- 
-\begin{equation}
-f(x)-f(y)= \nabla f(\xi) (x-y)
-\end{equation}
+La  definición anterior es la usada por lo general pero hay sutilezas en este concepto que no siempre son mostradas; como por ejemplo que $\delta$ depende de donde se ponga el  punto $C$, esto se ve claramente en la siguiente función: $f: (0,1) \to \mathbb{R}$, $f(x)=\frac{1}{x} $ al $C$ estar más lejos del $0$ permite un $\delta$ más grande pero al acercarse al $0$ el $\delta$ debe ser más pequeño. La continuidad de Lipschitz permite que se defina un $\delta$ constante sin importar donde se encuentre el $C$. Para resolver este detalle se motiva la definicón de Lipschitz continuo. Se es Lipschitz continuo con constante $\eta$ si
 
 \begin{equation}
-\to |f(x)- f(y)| \le |\nabla f(\xi)| |x-y|
+|f(x) -f(y)| \leq \eta |x-y|,
 \end{equation}
 
-\begin{equation}
-\to |f(x)- f(y)| \le \sup|\nabla f(\xi)| |x-y|
-\end{equation}
- 
-Como $\nabla f$ es acotado se tiene que $\sup |\nabla f(\xi)|=\eta$.\\
+esto permite decir que  $|f(x)-f(y)| < \epsilon $ entonces $\delta < \frac{\epsilon}{\eta} $. Ahora si f es derivable y $\nabla f$ es acotado, para $x$ y $y$ dados existe $\xi$ entre ellos tal que:
 
-Dado esta introducción a la continuidad de Lipschitz va encontrará una cota para la constante $\eta$ de la función $f(\phi)=\norm{\rho_{S}-\Omega_{S}}_{1}$. Entonces para poder lograr esto se procederá de la siguiente forma se definen dos estados reducidos $\rho_{1}= Tr_{E} (\ket{\phi_{1}} \bra{\phi_{1}})$ y $\rho_{2}=Tr_{E}(\ket{\phi_{2}} \bra{\phi_{2}})$, Ahora se tiene
+
+\begin{multline}
+\implies f(x)-f(y)= \nabla f(\xi) (x-y) \\
+\implies |f(x)- f(y)| \le |\nabla f(\xi)| |x-y| 
+\implies |f(x)- f(y)| \le \sup|\nabla f(\xi)| |x-y|,
+\end{multline}
+como $\nabla f$ es acotado se tiene que $\sup |\nabla f(\xi)|=\eta$.\\
+
+Gracias a la normalización, los estados puros en $\mathcal{H_{R}}$ se pueden representar como puntos sobre la superficie de una hiperesfera de dimensión $2d_{R}-1$, o sea  $\mathbb{S}^{2d_{R}-1}$. Luego se puede aplicar \ref{lemma de levy} a estado cuánticos $\phi$ aleatoriamente seleccionados. Para los estados seleccionados aleatoriamente $\phi \in \mathcal{H}_{R}$, se desea mostrar que $\norm{\rho_{S}- \Omega_{S}}_{1} \approx 0$ con alta probabilidad. Para poder usar \ref{lemma de levy} primero  debe encontrarse la constante de Lipschitz ya teniendo una idea de qué es ser Lipschitz continuo se encontrará una cota para la constante $\eta$ de la función $f(\phi)=\norm{\rho_{S}-\Omega_{S}}_{1}$ que es la función que nos interesa para el problema físico. Entonces para poder lograr esto se procederá de la siguiente forma se definen dos estados reducidos $\rho_{1}= Tr_{E} (\ket{\phi_{1}} \bra{\phi_{1}})$ y $\rho_{2}=Tr_{E}(\ket{\phi_{2}} \bra{\phi_{2}})$, entonces
 
 \begin{equation}
 |f(\phi_{1})-f(\phi_{2})|^2= |\norm{\rho_{1}-\Omega}_{1} - \norm{\rho_{2}-\Omega}_{1}|^2.
 \end{equation}
 
-como $\norm{M}_{1}$ es una distancia (esto es $d(\rho_{1},\Omega)= \norm{\rho_{1}-\Omega}_{1}$) es cierto para un espacio métrico
+como $\norm{M}_{1}$ es una distancia (esto es $d(\rho_{1},\Omega)= \norm{\rho_{1}-\Omega}_{1}$) es cierto para un espacio métrico que
 
 \begin{equation}
-|d(x,z)-d(y,z)| \le d(x,y)
+|d(x,z)-d(y,z)| \le d(x,y),
 \end{equation}
 
 Por lo tanto 
 
 \begin{equation}
-|\norm{\rho_{1}-\Omega}_{1} - \norm{\rho_{2}-\Omega}_{1}|^2 \le \norm{\rho_{1}- \rho_{2} }_{1}^2=\norm{Tr_{E}(\ket{\phi_{1}} \bra{\phi_{1}}-\ket{\phi_{2}} \bra{\phi_{2}})}_{1}^{2}.
+\Big | \norm{\rho_{1}-\Omega}_{1} - \norm{\rho_{2}-\Omega}_{1} \Big |^2 \le \norm{\rho_{1}- \rho_{2} }_{1}^2= \norm{Tr_{E}(\ket{\phi_{1}} \bra{\phi_{1}}-\ket{\phi_{2}} \bra{\phi_{2}})}_{1}^{2}.
 \end{equation}
 
-Como hay una cota a la norma de una traza parcial,
+Como existe una cota a la norma de una traza parcial dada por
 
 \begin{equation}
-\norm{Tr_{\mathcal{B}}(M)}_{p} \le [dim(\mathcal{H_{B}})]^{\frac{p-1}{p}} \norm{M}_{p}.
+\norm{Tr_{\mathcal{B}}(M)}_{p} \le [dim(\mathcal{H_{B}})]^{\frac{p-1}{p}} \norm{M}_{p},
 \end{equation}
 
-entones por la cota anterior
-
+entones la cota sobre los estados reducidos queda 
 \begin{equation}
 \norm{Tr_{E}(\ket{\phi_{1}} \bra{\phi_{1}}-\ket{\phi_{2}} \bra{\phi_{2}})}_{1} \le \norm{\ket{\phi_{1}} \bra{\phi_{1}}-\ket{\phi_{2}} \bra{\phi_{2}}}_{1}.
 \end{equation}
 
-Se tiene que :
+Por lo tanto se tiene hasta ahora:
 \begin{equation}
-\norm{\rho_{1}- \rho_{2} }_{1}^2 \le \norm{\ket{\phi_{1}} \bra{\phi_{1}}-\ket{\phi_{2}} \bra{\phi_{2}}}_{1}^{2}
+\norm{\rho_{1}- \rho_{2} }_{1}^2 \le \norm{\ket{\phi_{1}} \bra{\phi_{1}}-\ket{\phi_{2}} \bra{\phi_{2}}}_{1}^{2},
 \end{equation}
 
-Usando la hermiticidad de $\rho$ y el teorema espectral se puede descomponer $\rho= UDU^{\dag}$ donde $U$ es un operador unitario y $D$ es diagonal. Además por las propiedades de la traza $Tr(\sqrt{UD^2U^{\dag}})= Tr(U\sqrt{D^2}U^{\dag})= Tr(\sqrt{D^{2}})$ se llega a
+Usando la hermiticidad de $\rho$ y el teorema espectral se puede descomponer $\rho= UDU^{\dag}$ donde $U$ es un operador unitario y $D$ es diagonal. Junto con las propiedades de la traza $Tr(\sqrt{UD^2U^{\dag}})= Tr(U\sqrt{D^2}U^{\dag})= Tr(\sqrt{D^{2}})$ se llega a
 \begin{equation}
 \norm{\ket{\phi_{1}} \bra{\phi_{1}}-\ket{\phi_{2}} \bra{\phi_{2}}}_{1}^{2} = 4(1-|\bra{\phi_{1}} \ket{\phi_{2}}|^{2})
 \end{equation}
-también
+entonces
 \begin{equation}
  4(1-|\bra{\phi_{1}} \ket{\phi_{2}}|^{2}) \le 4|\ket{\phi}-\ket{\phi}|^2.
 \end{equation}
 
-Uniendo todo los pasos anteriores
+Uniendo todos los pasos anteriores
 \begin{equation}
 |f(\phi_{1})-f(\phi_{2})|^{2} \le  4|\ket{\phi}-\ket{\phi}|^2
 \end{equation}
@@ -190,7 +191,9 @@ o sea
 
 Con esto se muestra que $\eta \le 2$.\\
 
-Habiendo dado una cota para $\eta$ ahora se usará el lema de Levy para la función $f(\phi)=\norm{\rho_{S} -\Omega_{S}}_{1}$ recordando que se reemplazará $d$ en el lema por $d=2d_{R}-1$. sustituyendo en el teorema se tiene:
+\subsection{Demostración del teorema 1}
+En esta parte se dará una demostración matemática explícita del principio general canónico usando el lema de Levy
+Habiendo dado una cota para $\eta$ ahora se puede usar por completo el lema \ref{lemma de levy} para la función $f(\phi)=\norm{\rho_{S} -\Omega_{S}}_{1}$ recordando que se reemplazará $d$ en el lema por $d=2d_{R}-1$. sustituyendo en el teorema se tiene:
 
 \begin{equation}
  2exp(-\frac{2C(d+1)\epsilon^2}{\eta^2})= 2exp(-\frac{4Cd_{R}\epsilon^2}{\eta^2})
@@ -329,7 +332,7 @@ donde $F_{RR'}$ es el operador "flip" $R \longleftrightarrow R'$. Como $F_{RR'}$
 Compilando lo anterior
 
 \begin{equation}
-\langle Tr \rho^2 \rangle = Tr_{RR'} \Bigg( \frac{1}{d_{R}(d_{R}+1)} \big( \mathbbm{1}_{RR'}+\mathbbm{1}_{RR'}(F_{SS'} \otimes F_{EE'}) \big)  (F_{SS'}\otimes \mathbbm{1}_{EE'})   \Bigg)
+\langle Tr_{S} \rho_{S}^2 \rangle = Tr_{RR'} \Bigg( \frac{1}{d_{R}(d_{R}+1)} \big( \mathbbm{1}_{RR'}+\mathbbm{1}_{RR'}(F_{SS'} \otimes F_{EE'}) \big)  (F_{SS'}\otimes \mathbbm{1}_{EE'})   \Bigg)
 \end{equation}
 
 Distribuyendo y sabiendo que al hacer dos veces la operación "flip"  es lo mismo que no haber hecho nada se sigue
@@ -341,11 +344,11 @@ Tr_{RR'} \Bigg( \frac{\mathbbm{1}_{RR'}}{d_{R}(d_{R}+1)} F_{SS'} \otimes \mathbb
 Por las propiedades aditivas de la traza junto con $\mathbbm{1}_{R} \otimes \mathbbm{1}_{R'}$  y $\frac{1}{d_{R}(d_{R}+1)} \le \frac{1}{d_{R}^{2}}$ se llega a:
 
 \begin{multline}
-
-Tr_{RR'} \Big( \frac{\mathbbm{1}_{RR'}}{d_{R}(d_{R}+1)}(F_{SS'} \otimes \mathbbm{1}_{EE'}) \Big) + Tr_{RR'} \Big( \frac{\mathbbm{1}_{RR'}}{d_{R}(d_{R}+1)} (\mathbbm{1}_{SS'} \otimes F_{EE'})  \Big)\\
-\le Tr_{RR'}\Big(\frac{\mathbbm{1}_{R}}{d_{R}} \otimes \frac{\mathbbm{1}_{R'}}{d_{R}} (F_{SS'} \otimes \mathbbm{1}_{EE'}) \Big) + Tr_{RR'}\Big(\frac{\mathbbm{1}_{R}}{d_{R}} \otimes \frac{\mathbbm{1}_{R'}}{d_{R}} (\mathbbm{1}_{SS'}\otimes 	F_{EE'}) \Big)
+\langle Tr_{S} \rho_{S}^2 \rangle= Tr_{RR'} \Big( \Big( \frac{\mathbbm{1}_{RR'}}{d_{R}(d_{R}+1)} \Big) (F_{SS'} \otimes \mathbbm{1}_{EE'})  \Big) \\
++ Tr_{RR'} \Big( \Big( \frac{\mathbbm{1}_{RR'}}{d_{R}(d_{R}+1)} \Big) (\mathbbm{1}_{SS'} \otimes F_{EE'} )  \Big)\\ 
+\leq Tr_{RR'} \Big( \Big( \frac{\mathbbm{1}_{R}}{d_{R}} \otimes  \frac{\mathbbm{1}_{R'}}{d_{R}}  \Big) (F_{SS'} \otimes \mathbbm{1}_{EE'})  \Big)\\
++ Tr_{RR'} \Big( \Big( \frac{\mathbbm{1}_{R}}{d_{R}} \otimes  \frac{\mathbbm{1}_{R'}}{d_{R}}  \Big) (\mathbbm{1}_{SS'} \otimes F_{EE'} )  \Big)
 \end{multline}
-
 
 Recordando que $\frac{\mathbbm{1}_{R}}{d_{R}}= \mathcal{E}_{R}$ y $\Omega_{S}=Tr_{E}(\mathcal{E}_{R})$ se tiene que:
 
